try to fix layout on mobile

--- a/app/assets/stylesheets/partials/_forms.sass
+++ b/app/assets/stylesheets/partials/_forms.sass
@@ -38,13 +38,14 @@ form, form.pure-form
 	position: relative
 	.fs-form-full
 		.fs-fields
-			height: 200px
+			height: 150px
 			li
 				padding-top: 45px
 			.form-title
 				font-size: 1.2em
 				padding-bottom: 10px
 			input.fs-anim-lower
+				width: 100%
 				font-size: .95em
 				background: white
 				color: #242424
@@ -56,8 +57,10 @@ form, form.pure-form
 		.fs-nav-dots
 			display: none
 		button.fs-continue
+			clear: both
+			width: 100%
+			margin-top: 15px
 			float: right
-			margin: 0
 
 .fs-form-overview
 	.fs-fields
@@ -74,6 +77,8 @@ form, form.pure-form
 					margin-top: .2em
 					padding: .3em .5em
 					color: #242424
+	.fs-submit
+		width: 100%
 
 #links-wrap
 	padding-top: 10px
